--- a/www/posn01/SP2/map/style.css
+++ b/www/posn01/SP2/map/style.css
@@ -87,3 +87,18 @@
   height:100%;
   background-color:rgb(232, 224, 221);
 }
+
+
+#locations-map {
+  display: block;
+  height: 500px;
+}
+.infoBox {
+  max-width: 300px;
+  background: #fff;
+  padding: 10px;
+  border: 1px solid red;
+}
+.infoBox img {
+  border: 1px solid yellow;
+}
